@@ -113,3 +113,6 @@ generators in Knuth's Seminumerical Algorithms, 3rd Ed.
 
 * Dan, Ho-Jin <hjdan@sys713.kaist.ac.kr> for divided differences interpolation
 routines
+
+* Stefan Koch <s.koch@seh-zuelpich.de> for useful bug reports and
+fixes for the special functions
